Fix issue where offscreen icon-bar made MS Edge add horizontal scroll

--- a/_assets/stylesheets/modules/navbar.scss
+++ b/_assets/stylesheets/modules/navbar.scss
@@ -8,6 +8,7 @@
 
 .navbar-header {
   position: relative;
+  overflow: hidden;
 }
 
 @media (min-width: $screen-md) {
